change color header

--- a/frontend/src/Assets/scss/_hero.scss
+++ b/frontend/src/Assets/scss/_hero.scss
@@ -3,7 +3,7 @@
 ========================================*/
 .hero-area {
     position: relative;
-    background-color: $black;
+    background-color: $globalBlue;
     padding: 180px 0 180px 0;
     z-index: 0;
 
