--- a/frontend/src/Assets/scss/_variables.scss
+++ b/frontend/src/Assets/scss/_variables.scss
@@ -17,69 +17,11 @@ $white-30: rgba($white, 0.3);
 $white-20: rgba($white, 0.2);
 $white-10: rgba($white, 0.1);
 
-// ========== black colors variants
-$black: #000;
-$black-90: rgba($black, 0.9);
-$black-80: rgba($black, 0.8);
-$black-70: rgba($black, 0.7);
-$black-60: rgba($black, 0.6);
-$black-50: rgba($black, 0.5);
-$black-40: rgba($black, 0.4);
-$black-30: rgba($black, 0.3);
-$black-20: rgba($black, 0.2);
-$black-10: rgba($black, 0.1);
-
-// ======== dark color
-$dark: #262d3f;
-$dark-2: #2f3546;
-$dark-3: #090e34;
-
-// ======== gray color
-$gray: #5d657b;
-$gray-2: #c2cbd6;
-
-// ======== primary color
-$primary: #4a6cf7;
-
-// ======== secondary color
-$secondary: #00c1f8;
-
-// ======== success color
-$success: #219653;
-
-// ======== danger color
-$danger: #d50100;
-
-// ======== warning color
-$warning: #f7c800;
-
-// ======== info color
-$info: #97ca31;
-
-// ======== purple color
-$purple: #9b51e0;
-
-// ======== light color
-$light: #efefef;
-$light-2: #e5e5e5;
-
-// ======== active color
-$active: #4a6cf7;
-
-// ======== deactive color
-$deactive: #cbe1ff;
-
-// ======== orange color
-$orange: #f2994a;
-
-// ======== deep-blue color
-$deep-blue: #345d9d;
-
 // ======== Shadow
 $shadow-one: 0px 5px 20px rgba(0, 0, 0, 0.1);
 // Colors ---------------
 $white: #fff;
-$black: #24126A;
+$globalBlue: #24126A;
 $gray: #F4F7FA;
 
 
@@ -90,7 +32,6 @@ $border-color: #F4EEFB;
 
 //Body Color
 $body-color: #727272;
-
 
 // Heading Color
 $heading-color: #081828;
