--- a/frontend/src/Assets/scss/header/_header.scss
+++ b/frontend/src/Assets/scss/header/_header.scss
@@ -2,7 +2,8 @@
 
 .header {
   padding: 30px 0;
-  //background: $white;
+  background: $heading-color;
+  
 
   .header-left {
     .menu-toggle-btn {
@@ -137,7 +138,7 @@
   //          p {
   //            font-size: 14px;
   //            color: $black-70;
-  //            margin-bottom: 0px;
+  //            margin-bottom: 0;
   //            line-height: 1.4;
   //          }
   //
