--- a/frontend/src/Assets/scss/header/_header.scss
+++ b/frontend/src/Assets/scss/header/_header.scss
@@ -1,52 +1,52 @@
 /* ========== header css ========== */
 
-.header {
-  padding: 30px 0;
-  background: $heading-color;
-  
-
-  .header-left {
-    .menu-toggle-btn {
-      .main-btn {
-        padding: 0px 15px;
-        height: 46px;
-        line-height: 46px;
-        border-radius: 10px;
-      }
-    }
-
-    .header-search {
-      form {
-        max-width: 270px;
-        position: relative;
-
-        input {
-          width: 100%;
-          border: 1px solid $light;
-          background: rgba($light, 0.5);
-          border-radius: 10px;
-          height: 46px;
-          padding-left: 44px;
-          @include transition(0.3s);
-
-          &:focus {
-            border-color: $primary;
-            background: $white;
-          }
-        }
-        button {
-          position: absolute;
-          border: none;
-          background: transparent;
-          left: 16px;
-          top: 0;
-          height: 46px;
-          color: $gray;
-          font-weight: 700;
-        }
-      }
-    }
-  }
+//.header {
+//  padding: 30px 0;
+//  background: $heading-color;
+//
+//
+//  .header-left {
+//    .menu-toggle-btn {
+//      .main-btn {
+//        padding: 0px 15px;
+//        height: 46px;
+//        line-height: 46px;
+//        border-radius: 10px;
+//      }
+//    }
+//
+//    .header-search {
+//      form {
+//        max-width: 270px;
+//        position: relative;
+//
+//        input {
+//          width: 100%;
+//          border: 1px solid $light;
+//          background: rgba($light, 0.5);
+//          border-radius: 10px;
+//          height: 46px;
+//          padding-left: 44px;
+//          @include transition(0.3s);
+//
+//          &:focus {
+//            border-color: $primary;
+//            background: $white;
+//          }
+//        }
+//        button {
+//          position: absolute;
+//          border: none;
+//          background: transparent;
+//          left: 16px;
+//          top: 0;
+//          height: 46px;
+//          color: $gray;
+//          font-weight: 700;
+//        }
+//      }
+//    }
+//  }
 
   //.header-right {
   //  display: flex;
@@ -241,4 +241,4 @@
   //    }
   //  }
   //}
-}
+//}
